Fix weird feedback box description caused by IE11 quirk.

--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -661,6 +661,8 @@ aside[feedback]
     font-family: $sans
     font-size: 14px
     margin-bottom: 15px
+    width: 100%
+    word-wrap: break-word
     @media (max-width: 1190px)
       margin-bottom: 10px
   a
