--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -793,6 +793,9 @@ form[representative]
       width: 100%
       input
         flex: 1
+        font-family: $sans
+        font-size: 16px
+        font-weight: 300
         @media (max-width: 30em)
           width: 50%
       section[buttons]
@@ -825,6 +828,8 @@ form[representative]
         line-height: 1.3em
         width: 45%
         word-wrap: break-word
+        @media (max-width: 560px)
+          width: 100%
         .name
           font-weight: 500
         hr
