Replace photos with assethosted images.

--- a/app/styles/index.sass
+++ b/app/styles/index.sass
@@ -303,7 +303,7 @@ article
 
   .hero  // The large lead asset at the beginning of the story.
     align-items: center
-    background: url('https://placeholdit.imgix.net/~text?txtsize=33&txt=hero%20image&w=2048&h=1024') no-repeat center top
+    background: url('http://a.scpr.org/i/b10ec0efebe4392a9bcbd2e99a70f0c3/148452-full.jpg') no-repeat center top
     background-size: cover
     display: flex
     justify-content: center
